--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,5 +1,8 @@
 steps:
 - name: 'eu.gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'eu.gcr.io/de0360-sbx-gda3sandboxgj-gj/cicd2-app', '.']
+  # Push the image to Artifact Registry
+- name: 'eu.gcr.io/cloud-builders/docker'
+  args: ['push', 'eu.gcr.io/de0360-sbx-gda3sandboxgj-gj/cicd2-app']  
 images:
 - 'eu.gcr.io/de0360-sbx-gda3sandboxgj-gj/cicd2-app'
