--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -3,11 +3,11 @@ steps:
   args: ['clone', 'https://github.com/GeraldJG/poc-cicd2.git']
 
 - name: 'eu.gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'cicd2-app', '.']
+  args: ['build', '-t', 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app', '.']
 
   # Push the image to Artifact Registry
 - name: 'eu.gcr.io/cloud-builders/docker'
-  args: ['push', 'cicd2-app']  
+  args: ['push', 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app']  
 
 images:
-- 'eu.gcr.io/de0360-sbx-gda3sandboxgj-gj/cicd2-app'
+- 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
