--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,12 +1,12 @@
 steps:
-- name: 'eu.gcr.io/cloud-builders/git'
+- name: 'gcr.io/cloud-builders/git'
   args: ['clone', 'https://github.com/GeraldJG/poc-cicd2.git']
 
-- name: 'eu.gcr.io/cloud-builders/docker'
+- name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app', '.']
 
   # Push the image to Artifact Registry
-- name: 'eu.gcr.io/cloud-builders/docker'
+- name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app']  
 
 images:
