--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -16,7 +16,7 @@ steps:
   args:
     - '-c'
     - |
-      gcloud container clusters get-credentials autopilot-cluster-1 --zone europe-west3-a --project de0360-sbx-gda3sandboxgj-gj
+      gcloud container clusters get-credentials autopilot-cluster-1 --zone europe-west3 --project de0360-sbx-gda3sandboxgj-gj
       kubectl set image deployment/cicd2-app-latest CONTAINER_NAME=europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app:latest
 
 images:
