--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -16,7 +16,8 @@ steps:
   args:
     - '-c'
     - |
-      gcloud container clusters get-credentials autopilot-cluster-1 --zone europe-west3 --project de0360-sbx-gda3sandboxgj-gj
+       gcloud run deploy cicd2-app --image europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app --region europe-west3
+    #  gcloud container clusters get-credentials autopilot-cluster-1 --zone europe-west3 --project de0360-sbx-gda3sandboxgj-gj
     # kubectl set image deployment/cicd2-app-latest CONTAINER_NAME=europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app:latest
 
 images:
