--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -11,7 +11,7 @@ steps:
 
 
    # Set up kubectl
-- name: 'gcr.io/cloud-builders/kubectl'
+- name: 'eu.gcr.io/cloud-builders/kubectl'
   entrypoint: 'bash'
   args:
     - '-c'
