--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -9,15 +9,26 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app']  
 
+  # test cloud run
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args:
+    - 'run'
+    - 'deploy'
+    - 'cicd2-app'
+    - '--image'
+    - 'gcr.io/$PROJECT_ID/cicd2-app'
+    - '--region'
+    - 'europe-west3'
 
    # Set up kubectl
-- name: 'gcr.io/cloud-builders/kubectl'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      gcloud container clusters get-credentials autopilot-cluster-1 --region europe-west3 --project de0360-sbx-gda3sandboxgj-gj
-      kubectl set image deployment/cicd2-app-latest CONTAINER_NAME=europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app:latest
+#- name: 'gcr.io/cloud-builders/kubectl'
+#  entrypoint: 'bash'
+#  args:
+#    - '-c'
+#    - |
+#      gcloud container clusters get-credentials autopilot-cluster-1 --region europe-west3 --project de0360-sbx-gda3sandboxgj-gj
+#      kubectl set image deployment/cicd2-app-latest CONTAINER_NAME=europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app:latest
 
 images:
 - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
