--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -17,9 +17,9 @@ steps:
     - 'deploy'
     - 'cicd2-app'
     - '--image'
-    - 'gcr.io/$PROJECT_ID/cicd2-app'
+      - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
     - '--region'
-    - 'europe-west3'
+      - 'europe-west3'
 
 images:
 - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
