--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -20,6 +20,8 @@ steps:
   - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
   - '--region'
   - 'europe-west3'
+  - '--ingress'
+  - 'internal-and-cloud-load-balancing'
 
 images:
 - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
