--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -21,7 +21,7 @@ steps:
   - '--region'
   - 'europe-west3'
   - '--ingress'
-  - 'internal-and-cloud-load-balancing'
+  - 'internal'
 
 images:
 - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
