--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -24,7 +24,7 @@ steps:
   - 'internal'
   - '--platform'
   - 'managed'
-  - '--allow-unauthenticated'
+  - '--no-allow-unauthenticated'
 
 images:
 - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
