--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -25,6 +25,8 @@ steps:
   - '--platform'
   - 'managed'
   - '--no-allow-unauthenticated'
+  - '--port'
+  - '9000'
 
 images:
 - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
