--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -9,23 +9,18 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app']  
   
-# start container using  cloud run
+# start container as job using  cloud run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
   args:
   - 'run'
+  - 'jobs'
   - 'deploy'
   - 'cicd2-app'
   - '--image'
   - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
   - '--region'
   - 'europe-west3'
-  - '--ingress'
-  - 'internal'
-  - '--platform'
-  - 'managed'
-  - '--no-allow-unauthenticated'
-  - '--no-traffic'
-
+  - '--execute-now'
 images:
 - 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app'
