--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -8,7 +8,16 @@ steps:
 # Push the image to Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app']  
-  
+
+# Set up kubectl
+- name: 'gcr.io/cloud-builders/kubectl'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      gcloud container clusters get-credentials autopilot-cluster-1 --region europe-west3 --project de0360-sbx-gda3sandboxgj-gj
+      kubectl run cicd2-app-latest --image=europe-west3-docker.pkg.dev/de0360-sbx-gda3sandboxgj-gj/gda3-cicd-docker-repo/cicd2-app:latest
+
 # start container as job using  cloud run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
