--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 service: default
 runtime: python39
-
+vm: true
 service_account: de0360-sbx-gda3sandboxgj-gj@appspot.gserviceaccount.com
 
 entrypoint: python app.py
